[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
websockets = ">=6.0,<7.0"
aiohttp = ">=3.3.0,<3.6.0"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"